<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/push"
        android:icon="@drawable/push"
        android:title="push new article"
        app:showAsAction="always"/>
</menu>