<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/commit"
        android:icon="@drawable/commit"
        android:title="commit the article"
        app:showAsAction="always"/>
</menu>